--- a/rc21/src/main/res/layout/status_widget.xml
+++ b/rc21/src/main/res/layout/status_widget.xml
@@ -1,18 +1,41 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="@dimen/widget_margin"
-    android:orientation="vertical">
+    android:weightSum="1">
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/widgetMap"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/lblCurrentMap" />
+        android:text="@string/lblCurrentMap"
+        android:layout_weight="0.9"/>
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="R"
+        android:id="@+id/button"
+        android:layout_gravity="end"
+        android:layout_weight="0.1" />
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/widgetPlayers"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="@string/lblPlayers" />
 
-</LinearLayout>
+    </TableRow>
+
+</TableLayout>
