--- a/rc21/src/main/res/layout/mapdetail.xml
+++ b/rc21/src/main/res/layout/mapdetail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mapDetailTable"
+    android:id="@+id/mapDetailTable1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/mapName"
+            android:id="@+id/mapName1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
@@ -29,7 +29,7 @@
 
 
         <ImageView
-            android:id="@+id/mapImage"
+            android:id="@+id/mapImage1"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_column="0"
@@ -47,7 +47,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/lblDesc"
+                android:id="@+id/lblDesc1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lblMapDesc"
@@ -55,18 +55,18 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/mapDesc"
+                android:id="@+id/mapDesc1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
-                android:id="@+id/spacer"
+                android:id="@+id/spacer1"
                 android:layout_width="10dp"
                 android:layout_height="10dp" />
 
             <TextView
-                android:id="@+id/lblTimelimit"
+                android:id="@+id/lblTimelimit1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lblTimelimit"
@@ -74,7 +74,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/mapTimelimit"
+                android:id="@+id/mapTimelimit1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
