--- a/rc21/src/main/res/layout/mapdetail_cards.xml
+++ b/rc21/src/main/res/layout/mapdetail_cards.xml
@@ -1,170 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mapDetailTable"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:stretchColumns="1"
-    android:padding="5dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TableRow
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/mapName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:gravity="center_horizontal"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="bold"
-            android:layout_span="2" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <ImageView
-            android:id="@+id/mapImage"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_column="0"
-            android:layout_span="1"
-            android:contentDescription="@string/mapImageDescription"
-            android:cropToPadding="false"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_span="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/lblDesc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lblMapDesc"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/mapDesc"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/spacer"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
-
-            <TextView
-                android:id="@+id/lblTimelimit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lblTimelimit"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/mapTimelimit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        </LinearLayout>
-
-    </TableRow>
-
-    <!--
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        card_view:cardElevation="5dp"
+        card_view:contentPadding="5dp"
+        card_view:cardUseCompatPadding="true">
 
         <TableLayout
+            android:id="@+id/mapDetailTable"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_span="2"
-            android:orientation="horizontal"
-            android:stretchColumns="0,1">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:stretchColumns="1">
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:measureWithLargestChild="false">
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/axisObjectives"
-                    android:layout_width="0dp"
+                    android:id="@+id/mapName"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
-                    android:layout_span="1"
-                    android:layout_weight="1"
-                    android:text="@string/axisObjectives"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/alliedObjectives"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:layout_span="1"
-                    android:layout_weight="1"
-                    android:text="@string/alliedObjectives"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textStyle="bold" />
+                    android:gravity="center_horizontal"
+                    android:textStyle="bold"
+                    android:hint="@string/sampleText"
+                    android:layout_span="2"
+                    style="@style/AppTheme.TextAppearance.Medium" />
             </TableRow>
+            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
 
             <TableRow
-                android:id="@+id/objectives"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                <ImageView
+                    android:id="@+id/mapImage"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
                     android:layout_column="0"
                     android:layout_span="1"
-                    android:layout_weight="1"
-                    android:measureWithLargestChild="false"
-                    android:orientation="vertical">
-
-                    <ListView
-                        android:id="@+id/listAxisObjs"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_weight="1" />
-                </LinearLayout>
+                    android:contentDescription="@string/mapImageDescription"
+                    android:src="@drawable/unknown_map"
+                    android:cropToPadding="false"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp" />
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_column="1"
                     android:layout_span="1"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <ListView
-                        android:id="@+id/listAlliedObjs"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_weight="1" />
+                    <TextView
+                        android:id="@+id/lblDesc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/lblMapDesc"
+                        android:textAppearance="@style/AppTheme.TextAppearance.Small"
+                        android:textStyle="bold" />
+                    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+
+                    <TextView
+                        android:id="@+id/mapDesc"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:hint="@string/sampleText"
+                        android:textAppearance="@style/AppTheme.TextAppearance.Small" />
+
+                    <TextView
+                        android:id="@+id/spacer"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp" />
+
+                    <TextView
+                        android:id="@+id/lblTimelimit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/lblTimelimit"
+                        android:textAppearance="@style/AppTheme.TextAppearance.Small"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/mapTimelimit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/sampleText"
+                        android:textAppearance="@style/AppTheme.TextAppearance.Small" />
+
                 </LinearLayout>
+
             </TableRow>
 
         </TableLayout>
 
-    </TableRow>
-    -->
+    </android.support.v7.widget.CardView>
 
-</TableLayout>
+</LinearLayout>
