--- a/rc21/src/main/res/layout/warningdetail_cards.xml
+++ b/rc21/src/main/res/layout/warningdetail_cards.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view_ban"
+        android:id="@+id/card_view_warning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardElevation="5dp"
@@ -15,7 +15,7 @@
         card_view:cardUseCompatPadding="true">
 
         <TableLayout
-            android:id="@+id/banTable"
+            android:id="@+id/warningTable"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/bannedPlayer"
+                    android:id="@+id/warnedPlayer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
@@ -37,7 +37,7 @@
                     android:gravity="start" />
 
                 <TextView
-                    android:id="@+id/banCreated"
+                    android:id="@+id/warningCreated"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/sampleDate"
@@ -53,7 +53,7 @@
                 android:layout_marginBottom="2dp">
 
                 <TextView
-                    android:id="@+id/banReason"
+                    android:id="@+id/warning"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -69,56 +69,28 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="1"
                     android:gravity="start">
 
                     <TextView
-                        android:id="@+id/lblBanner"
+                        android:id="@+id/lblWarner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/bans_banner"
+                        android:text="@string/warnings_warner"
                         android:textAppearance="@style/AppTheme.TextAppearance.Small"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentStart="true"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/banner"
+                        android:id="@+id/warner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="@string/sampleText"
                         android:layout_alignParentTop="true"
-                        android:layout_toEndOf="@+id/lblBanner"
+                        android:layout_toEndOf="@+id/lblWarner"
                         android:layout_marginStart="5dp"
                         android:textAppearance="@style/AppTheme.TextAppearance.Small" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="end">
-
-                <TextView
-                    android:id="@+id/lblBanExpires"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/bans_expires"
-                    android:textAppearance="@style/AppTheme.TextAppearance.Small"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentStart="true"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/banExpires"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/sampleDate"
-                    android:layout_alignParentTop="true"
-                    android:layout_toEndOf="@+id/lblBanExpires"
-                    android:layout_marginStart="5dp"
-                    android:textAppearance="@style/AppTheme.TextAppearance.Small" />
 
                 </RelativeLayout>
 
