Integrate API, Add warnings and bans to rc10, migrate rc21 to rc17

--- a/rc10/src/main/res/layout/fragment_bans.xml
+++ b/rc10/src/main/res/layout/fragment_bans.xml
@@ -5,10 +5,9 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/listMapCycle"
+        android:id="@+id/listBans"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:footerDividersEnabled="false">
+        android:layout_height="wrap_content">
     </ListView>
 
 </LinearLayout>
