--- a/rc10/src/main/res/layout/activity_main.xml
+++ b/rc10/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent" />
 
     <fragment
-        android:id="@+id/navigation_drawer_api_10"
+        android:id="@+id/navigation_drawer"
         android:name="com.renegade.rc.NavigationDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
