--- a/rc17/src/main/res/layout/fragment_ts.xml
+++ b/rc17/src/main/res/layout/fragment_ts.xml
@@ -6,7 +6,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/scrollTsViewer">
 
         <WebView
             android:id="@+id/tsViewer"
