--- a/rc21/src/main/res/values-v21/styles.xml
+++ b/rc21/src/main/res/values-v21/styles.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar" >
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
         <item name="android:colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
+    </style>
+    -->
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!--   your app branding color for the app bar -->
+        <item name="colorPrimary">#673ab7</item>
+        <!--   darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">#512da8</item>
+        <!--   theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">#9e9e9e</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
     <style name="AppTheme.TextAppearance.Small" parent="@android:style/TextAppearance.Material.Small" />
