--- a/rc21/src/main/res/values-v23/styles.xml
+++ b/rc21/src/main/res/values-v23/styles.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!--
-    <style name="AppTheme" parent="android:Theme.Holo.Light" >
-        <item name="android:textColorPrimary">@color/primary_text</item>
-        <item name="android:textColorSecondary">@color/secondary_text</item>
-    </style>
-    -->
-
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--   your app branding color for the app bar -->
         <item name="colorPrimary">#673ab7</item>
@@ -15,9 +7,6 @@
         <item name="colorPrimaryDark">#512da8</item>
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">#9e9e9e</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
-
-    <style name="AppTheme.TextAppearance.Small" parent="@android:style/TextAppearance.Holo.Small" />
-    <style name="AppTheme.TextAppearance.Medium" parent="@android:style/TextAppearance.Holo.Medium" />
-
 </resources>
