--- a/rc17/src/main/res/values/styles.xml
+++ b/rc17/src/main/res/values/styles.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light" >
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
     </style>
 
-    <style name="AppTheme.TextAppearance.Small" parent="@android:style/TextAppearance.Holo.Small" />
-    <style name="AppTheme.TextAppearance.Medium" parent="@android:style/TextAppearance.Holo.Medium" />
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+
+    <style name="AppTheme.TextAppearance.Small" parent="@style/TextAppearance.AppCompat.Small" />
+    <style name="AppTheme.TextAppearance.Medium" parent="@style/TextAppearance.AppCompat.Medium" />
 
 </resources>
